<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~  Copyright (c) 2024-2025, Ai东 (abc-127@live.cn).
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License").
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS,WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and limitations under the License.
  ~
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>cn.xbatis</groupId>
        <artifactId>xbatis</artifactId>
        <version>1.8.1</version>
    </parent>

    <url>https://gitee.com/mybatis-mp/mybatis-mp-spring-boot-parent/tree/springboot3</url>
    <artifactId>xbatis-spring-boot-parent</artifactId>
    <version>1.8.1-spring-boot3</version>
    <description>
        xbatis的spring3启动器的parent
    </description>
    <packaging>pom</packaging>

    <modules>
        <module>xbatis-spring-boot-starter</module>
    </modules>

    <issueManagement>
        <system>Gitee Issue</system>
        <url>https://gitee.com/xbatis/xbatis-spring-boot-starter/issues</url>
    </issueManagement>

    <scm>
        <connection>https://gitee.com/xbatis/xbatis-spring-boot-starter.git</connection>
        <url>https://gitee.com/xbatis/xbatis-spring-boot-starter</url>
    </scm>

    <licenses>
        <license>
            <name>Apache-2.0</name>
            <url>https://gitee.com/xbatis/xbatis-spring-boot-starter/blob/master/LICENSE</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>Ai东</name>
            <email>abc-127@live.cn</email>
            <roles>
                <role>Owner</role>
            </roles>
            <timezone>+8</timezone>
        </developer>
    </developers>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>

        <xbatis.version>1.8.1</xbatis.version>
        <xbatis-spring-boot-starter.version>1.8.1-spring-boot3</xbatis-spring-boot-starter.version>

        <logback.version>1.5.16</logback.version>
        <slf4j.version>2.0.16</slf4j.version>
        <mybatis-spring.version>3.0.4</mybatis-spring.version>
        <spring-boot.version>3.4.2</spring-boot.version>

        <mybatis-freemarker.version>1.3.0</mybatis-freemarker.version>
        <mybatis-velocity.version>2.3.0</mybatis-velocity.version>
        <mybatis-thymeleaf.version>1.1.0</mybatis-thymeleaf.version>

        <argLine>--add-opens java.base/java.lang=ALL-UNNAMED -Dfile.encoding=UTF-8</argLine>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>cn.xbatis</groupId>
                <artifactId>xbatis-spring-boot-starter</artifactId>
                <version>${xbatis-spring-boot-starter.version}</version>
            </dependency>

            <dependency>
                <groupId>cn.xbatis</groupId>
                <artifactId>xbatis-core</artifactId>
                <version>${xbatis.version}</version>
            </dependency>

            <dependency>
                <groupId>org.mybatis</groupId>
                <artifactId>mybatis-spring</artifactId>
                <version>${mybatis-spring.version}</version>
            </dependency>

            <!-- log -->
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${slf4j.version}</version>
            </dependency>

            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>jul-to-slf4j</artifactId>
                <version>${slf4j.version}</version>
            </dependency>

            <dependency>
                <groupId>ch.qos.logback</groupId>
                <artifactId>logback-classic</artifactId>
                <version>${logback.version}</version>
            </dependency>

            <dependency>
                <groupId>ch.qos.logback</groupId>
                <artifactId>logback-core</artifactId>
                <version>${logback.version}</version>
            </dependency>

            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <version>${spring-boot.version}</version>
            </dependency>

            <dependency>
                <groupId>org.mybatis.scripting</groupId>
                <artifactId>mybatis-freemarker</artifactId>
                <version>${mybatis-freemarker.version}</version>
            </dependency>
            <dependency>
                <groupId>org.mybatis.scripting</groupId>
                <artifactId>mybatis-velocity</artifactId>
                <version>${mybatis-velocity.version}</version>
            </dependency>
            <dependency>
                <groupId>org.mybatis.scripting</groupId>
                <artifactId>mybatis-thymeleaf</artifactId>
                <version>${mybatis-thymeleaf.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>cn.xbatis</groupId>
            <artifactId>xbatis-core</artifactId>
            <version>${xbatis.version}</version>
        </dependency>

        <dependency>
            <groupId>org.mybatis</groupId>
            <artifactId>mybatis-spring</artifactId>
            <version>${mybatis-spring.version}</version>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter</artifactId>
            <version>${spring-boot.version}</version>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-jdbc</artifactId>
            <version>${spring-boot.version}</version>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-autoconfigure-processor</artifactId>
            <version>${spring-boot.version}</version>
            <optional>true</optional>
        </dependency>

        <!-- @ConfigurationProperties annotation processing (metadata for IDEs) -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-configuration-processor</artifactId>
            <version>${spring-boot.version}</version>
            <optional>true</optional>
        </dependency>

        <dependency>
            <groupId>org.mybatis.scripting</groupId>
            <artifactId>mybatis-freemarker</artifactId>
            <version>${mybatis-freemarker.version}</version>
            <optional>true</optional>
        </dependency>

        <dependency>
            <groupId>org.mybatis.scripting</groupId>
            <artifactId>mybatis-velocity</artifactId>
            <version>${mybatis-velocity.version}</version>
            <optional>true</optional>
        </dependency>

        <dependency>
            <groupId>org.mybatis.scripting</groupId>
            <artifactId>mybatis-thymeleaf</artifactId>
            <version>${mybatis-thymeleaf.version}</version>
            <optional>true</optional>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.3.1</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <parameters>true</parameters>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.6.3</version>
                <configuration>
                    <additionalOptions combine.children="append">
                        <option>--add-modules</option>
                        <option>java.desktop</option>
                        <option>--add-modules</option>
                        <option>java.sql</option>
                    </additionalOptions>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>